--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>My Personal Portfolio</title>
 </head>
 <body>
-    <!-- start nav -->
     <nav id="navbar" class="nav">
         <ul class="nav-list">
             <li>
@@ -59,8 +58,7 @@
         <p>
           &copy; Created for
           <a href="https://www.freecodecamp.com/" target="_blank"
-            >freeCodeCamp <i class="freecodecamp"></i
-          ></a>
+            >freeCodeCamp</a>
         </p>
     </section>
       </footer>
